GameOfLifeLab/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
D:\unit3DecisionsLoops\GameOfLifeLab
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;D:\unit3DecisionsLoops\GameOfLifeLab
-d
D:\unit3DecisionsLoops\GameOfLifeLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
GameOfLifeLab
-windowtitle
GameOfLifeLab
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
D:\unit3DecisionsLoops\GameOfLifeLab/GameOfLife.java
D:\unit3DecisionsLoops\GameOfLifeLab/GameOfLifeTest.java
<---- end of javadoc command ---->
Loading source file D:\unit3DecisionsLoops\GameOfLifeLab/GameOfLife.java...
Loading source file D:\unit3DecisionsLoops\GameOfLifeLab/GameOfLifeTest.java...
Constructing Javadoc information...
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:2: error: package info.gridworld.actor does not exist
import info.gridworld.actor.ActorWorld;
                           ^
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:3: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Rock;
                           ^
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:4: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Grid;
                          ^
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:5: error: package info.gridworld.grid does not exist
import info.gridworld.grid.BoundedGrid;
                          ^
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:6: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Location;
                          ^
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:18: error: cannot find symbol
    private ActorWorld world;
            ^
  symbol:   class ActorWorld
  location: class GameOfLife
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:141: error: cannot find symbol
    public Actor getActor(int row, int col)
           ^
  symbol:   class Actor
  location: class GameOfLife
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLifeTest.java:6: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Actor;
                           ^
Standard Doclet version 1.7.0_45
Building tree for all the packages and classes...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\GameOfLife.html...
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:31: warning - @post is an unknown tag.
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:90: warning - @pre is an unknown tag.
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:90: warning - @post is an unknown tag.
D:\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:141: warning - @pre is an unknown tag.
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\GameOfLifeTest.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\package-frame.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\package-summary.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\package-tree.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\constant-values.html...
Building index for all the packages and classes...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\overview-tree.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\index-all.html...
Building index for all classes...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-frame.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-noframe.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\index.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\help-doc.html...
Generating D:\unit3DecisionsLoops\GameOfLifeLab\doc\stylesheet.css...
12 warnings
